src/test/ui/coherence/coherence-negative-impls-safe.old.stderr
error[E0198]: negative impls cannot be unsafe
  --> $DIR/coherence-negative-impls-safe.rs:10:1
   |
LL | unsafe impl !Send for TestType {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0198`.
